--- a/src/SITE/RepresentantesBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/RepresentantesBundle/Resources/views/Default/index.html.twig
@@ -43,15 +43,13 @@
             <div id="dados_map">
                 <div class="dados_map">
                     <div class="controla_dados" id="controla_dados">
-                        {% for Representante in Representantes %}
-                        <strong id="unidade_map">{{ Representante.name }}</strong><br />
-                        <span id="endereco">{{ Representante.address }}</span> <span id="bairro">{{ Representante.bairro }}</span><br>
-                        <span id="cidade">{{ Representante.city }}</span> - <span id="estado">SC</span><br>
-                        <span id="telefone">{{ Representante.phone }}</span><br>
-                        <span id="latitude">{{ Representante.latitude }}</span>
-                        <span id="longitude">{{ Representante.longitude }}</span>
-                        <a href="Representante.email" id="email">{{ Representante.email }}</a>
-                        {% endfor %}
+                        <strong id="unidade_map"></strong><br />
+                        <span id="endereco"></span> <span id="bairro"></span><br>
+                        <span id="cidade"></span> - <span id="estado"></span><br>
+                        <span id="telefone"></span><br>
+                        <span id="latitude"></span>
+                        <span id="longitude"></span>
+                        <a href="" id="email"></a>
                     </div>
                 </div>
             </div>
