--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -18,6 +18,7 @@
                     </ul>
                 </div>
             </li>
+            <li><a href="{{ path('cms_representantes') }}" class="glyphicons group"><i></i><span>Representantes</span></a></li>
             <li><a href="{{ path('cms_user') }}" class="glyphicons user"><i></i><span>Usuários</span></a></li>
         </ul>
     </div>
