--- a/src/CMS/RepresentanteBundle/Resources/views/Representante/new.html.twig
+++ b/src/CMS/RepresentanteBundle/Resources/views/Representante/new.html.twig
@@ -22,22 +22,32 @@
         <a class="btn btn-default go-back" href="{{ path('cms_representantes') }}">
     Voltar
 </a>
-    <script>
+    {# Add ajax thingie that will update the city select box #}
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+    <script type="text/javascript">
         $(document).ready(function () {
             $('#cms_representantebundle_representante_estado').change(function(){
-                $('#city_state option:gt(0)').remove();
-                if($(this).val()){
-                    $.ajax({
-                        type: "GET",
-                        data: "estado_id=" + $(this).val(),
-                        url: Routing.generate('estado_list'),
-                        success: function(data){
-                            $('#cms_representantebundle_representante_cidade').append(data);
-                        }
-                    });
-                }
+                var val = $(this).val();
+                $.ajax({
+                    type: "POST",
+                    url: "{{ url('cms_representantes_ajax_estados') }}?estado_id=" + val,
+                    success: function(data) {
+
+                        // Remove current options
+                        $('#cms_representantebundle_representante_cidade').html('');
+
+                        $.each(data, function(k, v) {
+                            $('#cms_representantebundle_representante_cidade').append('<option value="' + v + '">' + k + '</option>');
+                        });
+                    }
+                });
+
+                return false;
             });
         });
+
     </script>
 {% endblock %}
 
