--- a/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
@@ -50,7 +50,7 @@
                         <a href="#" class="label">{% if cor is not null %}{{ cor }}{% else %}Cor{% endif %}</a>
                         <div class="opc-selectbox" data-input="cor">
                             {% for Cor in Cores %}
-                                <a href="#" data-value="{{ Cor.name }}">{{ Cor.name }}</a>
+                                <a href="#" data-value="{{ Cor.name }}">{{ Cor.code }} - {{ Cor.name }}</a>
                             {% endfor %}
                         </div>
                     </div>
