--- a/web/site/css/style.css
+++ b/web/site/css/style.css
@@ -334,6 +334,7 @@ p {
 .content-home {
 	float: left;
 	width: 100%;
+	height: 650px;
 	padding: 0 260px 0 0;
 	overflow: hidden;
 }
@@ -758,7 +759,7 @@ main {
 				width: 370px;
 				background-position: 330px center;
 			}
-		.filtro .selectbox div {
+		.filtro .selectbox .opc-selectbox {
 			position: absolute;
 			top: 50px;
 			left: 0;
@@ -766,7 +767,9 @@ main {
 			background: #fff;
 			padding: 10px 10px 5px 10px;
 			display: none;
-      z-index: 10;
+      		z-index: 10;
+      		max-height: 300px;
+      		overflow: auto;
 		}
 			.filtro .selectbox div a {
 				font-family: 'bebas_neueregular';
