--- a/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
@@ -49,8 +49,11 @@
                     <div class="selectbox">
                         <a href="#" class="label">{% if cor is not null %}{{ cor }}{% else %}Cor{% endif %}</a>
                         <div class="opc-selectbox" data-input="cor">
+                            <a href="#" data-value="Estampados">Estampados</a>
                             {% for Cor in Cores %}
-                                <a href="#" data-value="{{ Cor.name }}">{{ Cor.code }} - {{ Cor.name }}</a>
+                                {% if 'estampa' not in Cor.name|lower %}
+                                    <a href="#" data-value="{{ Cor.name }}">{{ Cor.code }} - {{ Cor.name }}</a>
+                                {% endif %}
                             {% endfor %}
                         </div>
                     </div>
