--- a/app/Resources/views/site/topo.html.twig
+++ b/app/Resources/views/site/topo.html.twig
@@ -21,7 +21,7 @@
                 </li>
                 <li class="node-3"><a href="{{ path('site_page_services') }}">Serviços prestados</a></li>
                 <li class="node-4"><a href="{{ path('site_representantes_homepage') }}">Representantes</a></li>
-                <li class="node-5"><a href="{{ path('contato_homepage') }}">Trabalhe Conosco</a></li>
+                <li class="node-5"><a href="{{ path('site_trabalhe_homepage') }}">Trabalhe Conosco</a></li>
                 <li class="node-6"><a href="{{ path('contato_homepage') }}">Contato</a></li>
                 <li class="node-7 parent" style="display: none">
                     <a href="#">Mídias Sociais</a>
@@ -36,7 +36,7 @@
             <span class="fake-nav node-2" data-node="2" data-url="#"></span>
             <span class="fake-nav node-3" data-node="3" data-url="{{ path('site_page_services') }}"></span>
             <span class="fake-nav node-4" data-node="4" data-url="{{ path('site_representantes_homepage') }}"></span>
-            <span class="fake-nav node-5" data-node="5" data-url="{{ path('contato_homepage') }}"></span>
+            <span class="fake-nav node-5" data-node="5" data-url="{{ path('site_trabalhe_homepage') }}"></span>
             <span class="fake-nav node-6" data-node="6" data-url="{{ path('contato_homepage') }}"></span>
             <span class="fake-nav node-7" data-node="7" data-url="#" style="display: none"></span>
         </nav>
