--- a/src/SITE/ContatoBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ContatoBundle/Resources/views/Default/index.html.twig
@@ -40,7 +40,7 @@
                 <input type="text" placeholder="Nome" name="nome" required>
                 <input type="text" placeholder="E-mail" name="email" required>
                 <input type="text" placeholder="Telefone" name="telefone" class="tel">
-                <textarea placeholder="Mensagem" name="contact_msg" required></textarea>
+                <textarea placeholder="Mensagem" name="mensagem" required></textarea>
                 <button type="submit" class="bt-default">Enviar</button>
             </form>
 
