--- a/src/SITE/ContatoBundle/Resources/views/Templates/trabalhe-conosco.html.twig
+++ b/src/SITE/ContatoBundle/Resources/views/Templates/trabalhe-conosco.html.twig
@@ -6,3 +6,19 @@
 <strong>Estado:</strong>{{ Estado.nome }}<br />
 <strong>Cidade:</strong>{{ form.cidade }}<br />
 <strong>Mensagem:</strong><br />{{ form.mensagem |nl2br }}<br />
+
+<script src="js/script.js?11"></script>  <script>
+// Span
+var span = document.getElementsByClassName('upload-path');
+// Button
+var uploader = document.getElementsByName('upload');
+// On change
+for( item in uploader ) {
+  // Detect changes
+  uploader[item].onchange = function() {
+    // Echo filename in span
+    span[0].innerHTML = this.files[0].name;
+  }
+}
+
+</script>
