--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -16,7 +16,7 @@
             <div class="bg-home home-1 ativo" style="background: url({{ asset('site/images/bg-home.jpg') }}) no-repeat center top;"></div>
             <div class="bg-home home-2" style="background: url({{ asset('site/images/bg-home2.jpg') }}) no-repeat center top;"></div>
             <div class="bg-home home-3" style="background: url({{ asset('site/images/bg-home3.jpg') }}) no-repeat center top;"></div>
-            <div class="bg-home home-4" style="background: url({{ asset('site/images/bg-home4.jpg') }}) no-repeat center top;"></div>
+            <div class="bg-home home-4" style="background: url({{ asset('site/images/bg-hometopo4.jpg') }}) no-repeat center top;"></div>
             <div class="wrapper">
                 <span class="setas seta-esq">Esquerda</span>
                 <span class="setas seta-dir">Direita</span>
@@ -57,7 +57,7 @@
                                     <a href="{{ path('site_page_about') }}" class="bt-default">Conheça a Douat</a>
                                 </section>
                             </div>
-                            <div class="swiper-slide claro" data-slide="4">
+                            <div class="swiper-slide" data-slide="4">
                                 <header>
                                     <h2>A malha que <span>movimenta com proteção</span></h2>
                                 </header>
