--- a/web/site/css/style.css
+++ b/web/site/css/style.css
@@ -917,6 +917,10 @@ main {
       display: none;
       cursor: pointer;
     }
+    .estampa-zoom .fechar-foto {
+    	top: 0;
+    	display: block;
+    }
 	.topo-prod .lk-voltar {
 		float: right;
 		font-size: 18px;
@@ -1001,6 +1005,20 @@ main {
 		text-align: center;
 		margin: 0 20px 20px 0;
 	}
+	.desc-prod .estampa-zoom {
+		position: absolute;
+		z-index: 101;
+		top: 150px;
+		left: 50%;
+		margin-left: -250px;
+		text-align: center;
+		width: 495px;
+		padding: 80px 0 0 0;
+		display: none;
+	}
+		.desc-prod .estampa-zoom img {
+			max-width: 100%;
+		}
 	.desc-prod aside {
 		float: left;
 		width: 215px;
@@ -1073,6 +1091,15 @@ main {
 		text-decoration: underline;
 	}
 
+.mensagem-sucesso {
+	float: left;
+	width: 100%;
+	font-family: 'bebas_neueregular';
+	font-size: 22px;
+	letter-spacing: 0.5px;
+	color: #1c7800;
+	padding: 0 0 15px 0;
+}
 label.error {display: none !important;}
 .form-default {
 	float: left;
@@ -1084,11 +1111,11 @@ label.error {display: none !important;}
 		float: left;
 		margin: 0 0 20px 0;
 		padding: 15px 15px 10px 15px;
-		font-family: 'bebas_neueregular';
+		font-family: Tahoma;
+		letter-spacing: -1px;
 		color: #999999;
-		font-size: 18px;
+		font-size: 16px;
 		line-height: 20px;
-		text-transform: uppercase;
 		transition: all 0.5s;
 	}
 		.form-default input.error {
@@ -1106,11 +1133,11 @@ label.error {display: none !important;}
 		float: left;
 		margin: 0 0 20px 0;
 		padding: 15px 15px 10px 15px;
-		font-family: 'bebas_neueregular';
+		font-family: Tahoma;
 		color: #999999;
-		font-size: 18px;
+		font-size: 16px;
+		letter-spacing: -1px;
 		line-height: 20px;
-		text-transform: uppercase;
 		height: 120px;
 	}
 		.form-default textarea.error {
@@ -1143,6 +1170,8 @@ label.error {display: none !important;}
 			padding: 10px 10px 5px 10px;
 			display: none;
 			z-index: 10;
+			max-height: 300px;
+			overflow: auto;
 		}
 			.form-default .selectbox div a {
 				font-family: 'bebas_neueregular';
