--- a/src/SITE/ContatoBundle/Resources/views/Templates/trabalhe-conosco.html.twig
+++ b/src/SITE/ContatoBundle/Resources/views/Templates/trabalhe-conosco.html.twig
@@ -7,7 +7,7 @@
 <strong>Cidade:</strong>{{ form.cidade }}<br />
 <strong>Mensagem:</strong><br />{{ form.mensagem |nl2br }}<br />
 
-<script src="js/script.js?11"></script>  <script>
+<script>
 // Span
 var span = document.getElementsByClassName('upload-path');
 // Button
