--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -79,6 +79,7 @@
                 <script type="text/javascript" src="{{ asset('site/js/jqClock.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('site/js/idangerous.swiper.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('site/js/ZeroClipboard.js') }}"></script>
+                <script type="text/javascript" src="{{ asset('site/js/jquery.customSelect.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('site/js/master.js') }}"></script>
             {% endblock %}
 
