--- a/app/Resources/views/site/scripts.html.twig
+++ b/app/Resources/views/site/scripts.html.twig
@@ -8,5 +8,6 @@
 <script src="{{ asset('site/js/jquery.mask.min.js') }}"></script>
 <script src="{{ asset('site/js/jquery.flexslider-min.js') }}"></script>
 <script src="{{ asset('site/js/idangerous.swiper.js') }}"></script>
+<script src="{{ asset('site/js/jquery.customSelect.js') }}"></script>
 <script src="{{ asset('site/js/script.js?23') }}"></script>
 {% endblock %}
