Produtos Ativos/Inativos

--- a/src/CMS/ProductBundle/Resources/views/Product/index.html.twig
+++ b/src/CMS/ProductBundle/Resources/views/Product/index.html.twig
@@ -18,7 +18,7 @@
         <div class="widget widget-body-white widget-heading-simple">
             <div class="widget-body">
                 <!-- Table -->
-                <table class="dynamicTable tableTools table table-striped checkboxs records_list">
+                <table class="dynamicTable tableTools table table-striped checkboxs records_list" rel="produtos/index_ajax">
                     <thead>
                         <tr>
                             <th class="text-center">
@@ -28,7 +28,12 @@
                                         <input type="checkbox">
                                     </label>
                                 </div>
-                            </th>                                <th>Id</th>                                <th>Name</th>                                <th>Createdat</th>                                <th>Updatedat</th>                                <th>Isactive</th>
+                            </th>
+                            <th>Id</th>
+                            <th>Name</th>
+                            <th>Createdat</th>
+                            <th>Updatedat</th>
+                            <th>Isactive</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
