--- a/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
@@ -50,20 +50,24 @@
                     <input type="text" name="malha" placeholder="Nome da malha">
                     <button type="submit">Filtrar</button>
                 </form>
-                <ul class="lista-blocos">
                 {% for Category in Categories %}
-                    {% for Product in Category.Products %}
-                    {% if Product.isActive == 1 %}
-                    <li>
-                        <a href="{{ path('product_show', {category_slug: Category.slug, product_slug: Product.slug}) }}">
-                            <span><img src="{{ asset(Product.image) }}"></span>
-                            <strong>{{ Product.name }}</strong>
-                        </a>
-                    </li>
+                    {% if Category.Products.count %}
+                        <ul class="lista-blocos">
+                            {% for Product in Category.Products %}
+                            {% if Product.isActive == 1 %}
+                            <li>
+                                <a href="{{ path('product_show', {category_slug: Category.slug, product_slug: Product.slug}) }}">
+                                    <span><img src="{{ asset(Product.image) }}"></span>
+                                    <strong>{{ Product.name }}</strong>
+                                </a>
+                            </li>
+                            {% endif %}
+                            {% endfor %}
+                        </ul>
+                    {% else %}
+                        <strong class="nada-encontrado">Não há registros cadastrados nessa área até o momento.</strong>
                     {% endif %}
-                    {% endfor %}
                 {% endfor %}
-                </ul>
 
             </section>
 
