--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -122,10 +122,10 @@
                         </nav>
                         <nav class="only-mobile nav-malhas">
                             <ul class="slide-mobile">
-                                <li class="node-1"><a href="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'lancamentos'}) }}" class="troca-malha" data-bg="1"><span class="icon-fitness"></span>Fitness <br><strong>Conheça a linha</strong></a></li>
-                                <li class="node-2"><a href="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'lancamentos'}) }}" class="troca-malha" data-bg="1"><span class="icon-lingerie"></span>Lingerie <br><strong>Conheça a linha</strong></a></li>
-                                <li class="node-3"><a href="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'lancamentos'}) }}" class="troca-malha" data-bg="1"><span class="icon-escolar"></span>Escolar <br><strong>Conheça a linha</strong></a></li>
-                                <li class="node-4"><a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'lancamentos'}) }}" class="troca-malha" data-bg="1"><span class="icon-praia"></span>Praia <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-1"><a href="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon-fitness"></span>Fitness <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-2"><a href="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon-lingerie"></span>Lingerie <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-3"><a href="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon-escolar"></span>Escolar <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-4"><a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon-praia"></span>Praia <br><strong>Conheça a linha</strong></a></li>
                             </ul>
                         </nav>
                     </article>
