--- a/app/Resources/views/cms_base.html.twig
+++ b/app/Resources/views/cms_base.html.twig
@@ -115,7 +115,7 @@
         <script src="{{ asset('cms/js/common/forms/elements/bootstrap-select/assets/lib/js/bootstrap-select.js?v=v1.0.3-rc2') }}"></script>
         <script src="{{ asset('cms/js/common/forms/elements/bootstrap-select/assets/custom/js/bootstrap-select.init.js?v=v1.0.3-rc2') }}"></script>
         <script src="{{ asset('cms/js/common/forms/elements/select2/assets/lib/js/select2.js?v=v1.0.3-rc2&sv=v0.0.1.1') }}"></script>
-        <script src="{{ asset('cms/js/common/forms/editors/wysihtml5/assets/lib/js/wysihtml5-0.3.0_rc2.min.js?v=v1.0.3-rc2&sv=v0.0.1.1')}}"></script>
+        <script src="{{ asset('cms/js/common/forms/editors/wysihtml5/assets/lib/js/wysihtml5-0.3.0_rc2.js?v=v1.0.3-rc2&sv=v0.0.1.1')}}"></script>
         <script src="{{ asset('cms/js/common/forms/editors/wysihtml5/assets/lib/js/bootstrap-wysihtml5-0.0.2.js?v=v1.0.3-rc2&sv=v0.0.1.1') }}"></script>
         <script src="{{ asset('cms/js/common/forms/elements/jasny-fileupload/assets/js/bootstrap-fileupload.js?v=v1.0.3-rc2&sv=v0.0.1.1') }}"></script>
         <script src="{{ asset('cms/js/common/tables/datatables/assets/lib/extras/FixedHeader/FixedHeader.js?v=v1.0.3-rc2&sv=v0.0.1.1') }}"></script>
