--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -2,7 +2,7 @@
 <div id="menu" class="hidden-print hidden-xs ">
     <div id="sidebar-discover-wrapper">
         <ul class="list-unstyled">
-            <li class="active"><a href="surveys_multiple.html?lang=en" class="glyphicons home"><i></i><span>Dashboard</span></a></li>
+            <li class="active"><a href="{{ path('cms_dashboard_home') }}" class="glyphicons home"><i></i><span>Painel</span></a></li>
             <li>
                 <a href="#sidebar-discover-cameras" class="glyphicons plus" data-toggle="sidebar-discover"><i></i><span>Produtos</span></a>
                 <div id="sidebar-discover-cameras" class="sidebar-discover-menu">
